QA 6772 fase 2 spostamento di alcuni file in package più idonei